<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.rishi.bandfinder.MainActivity"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@color/colorBackground"

    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="30dp">


        <android.support.v7.widget.CardView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_margin="10dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:onClick="goToMaps">

            <LinearLayout
                android:background="@color/colorDarkButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:contentDescription="@string/mapsimage"
                    android:padding="10dp"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:background="@drawable/circlebackground"
                    android:src="@drawable/ic_map_black_24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/maps"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold" />

                <View

                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="10dp"
                    android:background="@color/colorPrimary" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/find_other_musicians"
                    android:textColor="@color/colorPrimary" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_margin="10dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:onClick="goToSettings">


            <LinearLayout
                android:background="@color/colorDarkButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:padding="10dp"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:background="@drawable/circlebackground"
                    android:src="@drawable/ic_build_black_24dp"
                    android:contentDescription="Settings Image" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/settings"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="10dp"
                    android:background="@color/colorPrimary" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/edit_your_settings"
                    android:textColor="@color/colorPrimary" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:gravity="center"
        android:orientation="horizontal">

        <android.support.v7.widget.CardView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_margin="10dp"
            android:onClick="goToWearables">
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorDarkButton"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="64dp"

                    android:layout_height="64dp"
                    android:background="@drawable/circlebackground"
                    android:padding="10dp"
                    android:src="@drawable/ic_watch_black_24dp"
                    android:contentDescription="wearables image" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="Wearables"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="10dp"
                    android:background="@color/colorPrimary" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/connect_to_wearables"
                    android:textColor="@color/colorPrimary" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_margin="10dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:onClick="shareOnFacebook">
            >

            <LinearLayout
                android:layout_width="match_parent"

                android:layout_height="match_parent"
                android:background="@color/colorDarkButton"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="64dp"

                    android:layout_height="64dp"
                    android:background="@drawable/circlebackground"
                    android:padding="10dp"
                    android:src="@drawable/ic_share_black_24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/share"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="10dp"
                    android:background="@color/colorPrimary" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/share_on_facebook"
                    android:textColor="@color/colorPrimary" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:clipToPadding="false"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.CardView
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:layout_width="320dp"
            android:layout_height="130dp"
            android:layout_margin="10dp"
            android:onClick="logout">
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorDarkButton"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="64dp"

                    android:layout_height="64dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/circlebackground"
                    android:padding="10dp"
                    android:src="@drawable/ic_exit_to_app_black_24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/logout"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold" />



                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text=""
                    android:textColor="@color/colorPrimary" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>




</LinearLayout>
